--- a/app/src/main/res/layout/fragment_analytics.xml
+++ b/app/src/main/res/layout/fragment_analytics.xml
@@ -25,7 +25,7 @@
                 android:id="@+id/layout_data"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/space_130"
+                android:layout_marginTop="@dimen/space_20"
                 android:background="@drawable/layout_background"
                 android:paddingVertical="@dimen/space_20"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -38,9 +38,7 @@
                     android:layout_width="wrap_content"
                     android:layout_marginStart="@dimen/space_20"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-
-                    >
+                    android:orientation="vertical">
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:layout_width="wrap_content"
@@ -168,7 +166,6 @@
                 android:layout_marginTop="30dp"
                 app:layout_constraintTop_toBottomOf="@id/tvData" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-
 
     </ScrollView>
 
