--- a/app/src/main/res/layout/fragment_arms.xml
+++ b/app/src/main/res/layout/fragment_arms.xml
@@ -5,7 +5,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Arms"
+        android:text="@string/arms"
         android:gravity="center"
         android:textSize="@dimen/size_50"/>
 
