--- a/app/src/main/res/layout/fragment_custom_train.xml
+++ b/app/src/main/res/layout/fragment_custom_train.xml
@@ -6,8 +6,8 @@
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Custom"
-        android:textSize="@dimen/space_60"
+        android:text="@string/custom"
+        android:textSize="60sp"
         android:gravity="center"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
