--- a/app/src/main/res/layout/fragment_description.xml
+++ b/app/src/main/res/layout/fragment_description.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/back_fragments"
-    >
-
+    android:background="@drawable/back_fragments">
 
 
     <com.airbnb.lottie.LottieAnimationView
@@ -13,53 +11,51 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/space_400"
         android:layout_weight="1"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
         app:lottie_rawRes="@raw/cycle_animation" />
-
 
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_motivation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/img_fitness"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="@string/motivation_quest"
-        android:textSize="@dimen/size_26"
-        android:textColor="@color/white"
-        android:textStyle="bold"
+        android:fontFamily="@font/lato"
         android:gravity="center"
-        android:fontFamily="@font/lato" />
+        android:text="@string/motivation_quest"
+        android:textColor="@color/white"
+        android:textSize="@dimen/size_26"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/img_fitness" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_motivation2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/space_10"
         android:gravity="center"
         android:text="@string/motivation2"
         android:textColor="@color/white"
-        android:layout_marginTop="@dimen/space_10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_motivation"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/tv_motivation" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/space_30"
         android:background="@drawable/layout_background"
         android:fontFamily="@font/lato"
         android:paddingVertical="@dimen/size_20"
         android:text="@string/next"
-        android:layout_marginHorizontal="@dimen/space_30"
-        android:textColor="@color/white"
         android:textAllCaps="false"
+        android:textColor="@color/white"
         android:textSize="@dimen/size_30"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
