--- a/app/src/main/res/layout/fragment_mine_profile.xml
+++ b/app/src/main/res/layout/fragment_mine_profile.xml
@@ -13,14 +13,14 @@
         android:layout_marginHorizontal="@dimen/space_30"
         android:fontFamily="@font/lato"
         android:gravity="center"
-        android:paddingEnd="@dimen/space_50"
-        android:textColor="@color/black"
-        app:fontFamily="@font/lato"
         android:paddingVertical="@dimen/space_15"
         android:text="@string/name"
+        android:textColor="@color/black"
         android:textSize="@dimen/size_20"
+        app:fontFamily="@font/lato"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_age"
         android:layout_width="wrap_content"
@@ -28,92 +28,97 @@
         android:layout_marginHorizontal="@dimen/space_30"
         android:fontFamily="@font/lato"
         android:gravity="center"
-        android:textColor="@color/black"
-        app:fontFamily="@font/lato"
         android:paddingVertical="@dimen/space_15"
         android:text="@string/age"
+        android:textColor="@color/black"
         android:textSize="@dimen/size_20"
+        app:fontFamily="@font/lato"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_name" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_edit_name"
-        android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        android:fontFamily="@font/lato"
-        android:text="@string/_0"
-        app:fontFamily="@font/lato"
-        android:paddingVertical="@dimen/space_15"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="@dimen/space_60"
-        android:textSize="@dimen/size_20" />
+        android:fontFamily="@font/lato"
+        android:paddingVertical="@dimen/space_15"
+        android:text="@string/_0"
+        android:textColor="@color/black"
+        android:textSize="@dimen/size_20"
+        app:fontFamily="@font/lato"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_edit_age"
-        android:text="@string/_0"
-        android:textColor="@color/black"
-        app:fontFamily="@font/lato"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@+id/tv_age"
+        android:layout_marginEnd="@dimen/space_60"
         android:fontFamily="@font/lato"
         android:paddingVertical="@dimen/space_15"
+        android:text="@string/_0"
+        android:textColor="@color/black"
+        android:textSize="@dimen/size_20"
+        app:fontFamily="@font/lato"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="@dimen/space_60"
-        android:textSize="@dimen/size_20" />
+        app:layout_constraintTop_toTopOf="@+id/tv_age" />
+
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_edit_weight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@+id/tv_weight"
+        android:layout_marginEnd="@dimen/space_60"
         android:fontFamily="@font/lato"
+        android:paddingVertical="@dimen/space_15"
         android:text="@string/_0"
         android:textColor="@color/black"
+        android:textSize="@dimen/size_20"
         app:fontFamily="@font/lato"
-        android:paddingVertical="@dimen/space_15"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="@dimen/space_60"
-        android:textSize="@dimen/size_20" />
+        app:layout_constraintTop_toTopOf="@+id/tv_weight" />
+
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_edit_target_weight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@+id/tv_target_weight"
+        android:layout_marginEnd="@dimen/space_60"
         android:fontFamily="@font/lato"
+        android:paddingVertical="@dimen/space_15"
         android:text="@string/_0"
         android:textColor="@color/black"
+        android:textSize="@dimen/size_20"
         app:fontFamily="@font/lato"
-        android:paddingVertical="@dimen/space_15"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="@dimen/space_60"
-        android:textSize="@dimen/size_20" />
+        app:layout_constraintTop_toTopOf="@+id/tv_target_weight" />
+
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_edit_height"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/tv_height"
+        android:layout_marginEnd="@dimen/space_60"
         android:fontFamily="@font/lato"
+        android:paddingVertical="@dimen/space_15"
         android:text="@string/_0"
         android:textColor="@color/black"
+        android:textSize="@dimen/size_20"
         app:fontFamily="@font/lato"
-        android:paddingVertical="@dimen/space_15"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="@dimen/space_60"
-        android:textSize="@dimen/size_20"/>
+        app:layout_constraintTop_toTopOf="@id/tv_height" />
+
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_edit_gender"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/tv_gender"
+        android:layout_marginEnd="@dimen/space_60"
         android:fontFamily="@font/lato"
+        android:paddingVertical="@dimen/space_15"
         android:text="@string/_0"
         android:textColor="@color/black"
+        android:textSize="@dimen/size_20"
         app:fontFamily="@font/lato"
-        android:paddingVertical="@dimen/space_15"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="@dimen/space_60"
-        android:textSize="@dimen/size_20"/>
+        app:layout_constraintTop_toTopOf="@id/tv_gender" />
 
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -125,8 +130,8 @@
         android:gravity="center"
         android:paddingVertical="@dimen/space_15"
         android:text="@string/weight"
-        android:textSize="@dimen/size_20"
         android:textColor="@color/black"
+        android:textSize="@dimen/size_20"
         app:fontFamily="@font/lato"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_age" />
@@ -141,8 +146,8 @@
         android:gravity="center"
         android:paddingVertical="@dimen/space_15"
         android:text="@string/target_weight"
-        android:textSize="@dimen/size_20"
         android:textColor="@color/black"
+        android:textSize="@dimen/size_20"
         app:fontFamily="@font/lato"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_weight" />
@@ -156,8 +161,8 @@
         android:gravity="center"
         android:paddingVertical="@dimen/space_15"
         android:text="@string/height"
-        android:textSize="@dimen/size_20"
         android:textColor="@color/black"
+        android:textSize="@dimen/size_20"
         app:fontFamily="@font/lato"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_target_weight" />
@@ -172,9 +177,9 @@
         android:gravity="center"
         android:paddingVertical="@dimen/space_15"
         android:text="@string/gender"
+        android:textColor="@color/black"
         android:textCursorDrawable="@color/blue_black"
         android:textSize="@dimen/size_20"
-        android:textColor="@color/black"
         app:fontFamily="@font/lato"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_height" />
