--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -92,11 +92,13 @@
             android:text="@string/feedback"
             android:textCursorDrawable="@color/blue_black"
             android:textSize="@dimen/size_20" />
+
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:layout_marginHorizontal="@dimen/space_60"
             android:background="@color/dark_t" />
+
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_share"
             android:layout_width="match_parent"
@@ -129,6 +131,7 @@
 
             android:text="@string/communicate_wit_us"
             android:textSize="@dimen/size_20" />
+
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
@@ -146,15 +149,11 @@
             android:gravity="center"
             android:paddingVertical="@dimen/space_15"
 
-            android:text="Exit"
+            android:text="@string/exit"
             android:textSize="@dimen/size_20" />
 
 
     </androidx.appcompat.widget.LinearLayoutCompat>
-
-
-<!---->
-<!---->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
