--- a/app/src/main/res/layout/fragment_remainder.xml
+++ b/app/src/main/res/layout/fragment_remainder.xml
@@ -1,45 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@drawable/back_fragments"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
 
     <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="20dp"
         android:layout_marginTop="20dp"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+        android:paddingHorizontal="20dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/titleET"
-            android:fontFamily="@font/lato"
-            android:textSize="@dimen/size_30"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/title" />
+            android:fontFamily="@font/lato"
+            android:hint="@string/title"
+            android:textSize="@dimen/size_30" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="20dp"
         android:layout_marginTop="20dp"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+        android:paddingHorizontal="20dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/messageET"
-            android:fontFamily="@font/lato"
-            android:textSize="@dimen/size_30"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/message" />
+            android:fontFamily="@font/lato"
+            android:hint="@string/message"
+            android:textSize="@dimen/size_30" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -52,40 +51,40 @@
 
             android:id="@+id/datePicker"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:datePickerMode="spinner"
-            android:calendarViewShown="false"
             android:layout_gravity="center"
-            android:scaleY="0.7"
-            android:scaleX="0.7"
             android:layout_marginLeft="-30dp"
             android:layout_marginRight="-30dp"
-            />
+            android:layout_weight="1"
+            android:calendarViewShown="false"
+            android:datePickerMode="spinner"
+            android:scaleX="0.7"
+            android:scaleY="0.7" />
+
         <TimePicker
             android:id="@+id/timePicker"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:timePickerMode="spinner"
             android:layout_gravity="center"
-            android:scaleY="0.7"
-            android:scaleX="0.7"
             android:layout_marginLeft="-30dp"
-            android:layout_marginRight="-30dp"/>
+            android:layout_marginRight="-30dp"
+            android:layout_weight="1"
+            android:scaleX="0.7"
+            android:scaleY="0.7"
+            android:timePickerMode="spinner" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/submitButton"
-        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/btn_message_back"
+        android:fontFamily="@font/lato"
+        android:paddingHorizontal="@dimen/space_20"
         android:text="@string/schedule_notification"
         android:textAllCaps="false"
-        android:fontFamily="@font/lato"
-        android:textSize="@dimen/size_20"
-        android:paddingHorizontal="@dimen/space_20"
-        android:background="@drawable/btn_message_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:textSize="@dimen/size_20" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
