--- a/app/src/main/res/layout/fragment_select_gender.xml
+++ b/app/src/main/res/layout/fragment_select_gender.xml
@@ -10,9 +10,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:fontFamily="@font/lato"
         android:text="@string/select_gender"
         android:textColor="@color/white"
-        android:fontFamily="@font/lato"
         android:textSize="@dimen/size_26"
         android:textStyle="bold" />
 
@@ -32,6 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginBottom="100dp"
         android:text="@string/man"
         android:textColor="@color/white"
         android:textSize="@dimen/size_26"
