--- a/app/src/main/res/layout/model_tasks.xml
+++ b/app/src/main/res/layout/model_tasks.xml
@@ -1,52 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cardViewModel"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/cardViewModel"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="@dimen/space_30"
-    android:layout_margin="@dimen/space_10">
+    android:layout_margin="@dimen/space_10"
+    app:cardCornerRadius="@dimen/space_30">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Task Title"
             android:gravity="center"
-            app:layout_constraintTop_toTopOf="parent"
+            android:paddingVertical="@dimen/space_15"
+            android:text="@string/task_title"
             android:textSize="@dimen/size_26"
-            android:paddingVertical="@dimen/space_15"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvEditTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
-            android:textSize="@dimen/size_20"
             android:gravity="center"
-            android:text="a"/>
+            android:textSize="@dimen/size_20"
+            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Task Title"
             android:gravity="center"
-            app:layout_constraintTop_toBottomOf="@+id/tvEditTitle"
+            android:paddingVertical="@dimen/space_15"
+            android:text="@string/task_description"
             android:textSize="@dimen/size_26"
-            android:paddingVertical="@dimen/space_15"/>
+            app:layout_constraintTop_toBottomOf="@+id/tvEditTitle" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvEditDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/tvDescription"
-            android:textSize="@dimen/size_20"
             android:gravity="center"
-            android:text="b"/>
+            android:textSize="@dimen/size_20"
+            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
