--- a/app/src/main/res/drawable/btn_message_back.xml
+++ b/app/src/main/res/drawable/btn_message_back.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:color="@color/teal_200"
+    <stroke android:color="#FFFFFF"
         android:width="3dp"
         android:dashGap="@dimen/size_30"/>
-    <solid android:color="#016564"/>
-    <corners android:radius="@dimen/space_10"/>
+    <solid android:color="#098583"/>
+    <corners android:radius="@dimen/space_20"/>
 
 </shape>
