--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -14,7 +14,9 @@
         android:gravity="center"
         android:text="@string/opinion"
         android:textColor="@color/white"
-        android:textSize="@dimen/size_20"
+        android:textSize="@dimen/size_26"
+        app:fontFamily="@font/lato"
+        android:paddingHorizontal="@dimen/space_20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
