--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="gray_btn">#8F8E8E</color>
     <color name="dark_green">#034343</color>
     <color name="dark_t">#00897B</color>
+    <color name="white_blue">#98E3DB</color>
 </resources>
