--- a/app/src/main/res/layout/fragment_mine_profile.xml
+++ b/app/src/main/res/layout/fragment_mine_profile.xml
@@ -1,188 +1,248 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/back_fragments">
 
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/space_30"
-        android:fontFamily="@font/lato"
-        android:gravity="center"
-        android:paddingVertical="@dimen/space_15"
-        android:text="@string/name"
-        android:textColor="@color/black"
-        android:textSize="@dimen/size_20"
-        app:fontFamily="@font/lato"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_age"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/space_30"
-        android:fontFamily="@font/lato"
-        android:gravity="center"
-        android:paddingVertical="@dimen/space_15"
-        android:text="@string/age"
-        android:textColor="@color/black"
-        android:textSize="@dimen/size_20"
-        app:fontFamily="@font/lato"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_name" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_edit_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/space_60"
-        android:fontFamily="@font/lato"
-        android:paddingVertical="@dimen/space_15"
-        android:text="@string/_0"
-        android:textColor="@color/black"
-        android:textSize="@dimen/size_20"
-        app:fontFamily="@font/lato"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_edit_age"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/space_60"
-        android:fontFamily="@font/lato"
-        android:paddingVertical="@dimen/space_15"
-        android:text="@string/_0"
-        android:textColor="@color/black"
-        android:textSize="@dimen/size_20"
-        app:fontFamily="@font/lato"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_age" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_edit_weight"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/space_60"
-        android:fontFamily="@font/lato"
-        android:paddingVertical="@dimen/space_15"
-        android:text="@string/_0"
-        android:textColor="@color/black"
-        android:textSize="@dimen/size_20"
-        app:fontFamily="@font/lato"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_weight" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_edit_target_weight"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/space_60"
-        android:fontFamily="@font/lato"
-        android:paddingVertical="@dimen/space_15"
-        android:text="@string/_0"
-        android:textColor="@color/black"
-        android:textSize="@dimen/size_20"
-        app:fontFamily="@font/lato"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_target_weight" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_edit_height"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/space_60"
-        android:fontFamily="@font/lato"
-        android:paddingVertical="@dimen/space_15"
-        android:text="@string/_0"
-        android:textColor="@color/black"
-        android:textSize="@dimen/size_20"
-        app:fontFamily="@font/lato"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/tv_height" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_edit_gender"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/space_60"
-        android:fontFamily="@font/lato"
-        android:paddingVertical="@dimen/space_15"
-        android:text="@string/_0"
-        android:textColor="@color/black"
-        android:textSize="@dimen/size_20"
-        app:fontFamily="@font/lato"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/tv_gender" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_weight"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/space_30"
-        android:fontFamily="@font/lato"
-        android:gravity="center"
-        android:paddingVertical="@dimen/space_15"
-        android:text="@string/weight"
-        android:textColor="@color/black"
-        android:textSize="@dimen/size_20"
-        app:fontFamily="@font/lato"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_age" />
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/space_30"
+                android:fontFamily="@font/lato"
+                android:gravity="center"
+                android:paddingVertical="@dimen/space_15"
+                android:text="@string/name"
+                android:textColor="@color/white"
+                android:textSize="@dimen/size_26"
+                android:textStyle="bold"
+                app:fontFamily="@font/lato"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvEmail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/space_30"
+                android:fontFamily="@font/lato"
+                android:gravity="center"
+                android:paddingVertical="@dimen/space_15"
+                android:text="@string/email"
+                android:textColor="@color/white"
+                android:textSize="@dimen/size_26"
+                android:textStyle="bold"
+                app:fontFamily="@font/lato"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_edit_name" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tv_age"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/space_30"
+                android:fontFamily="@font/lato"
+                android:gravity="center"
+                android:paddingVertical="@dimen/space_15"
+                android:text="@string/age"
+                android:textColor="@color/white"
+                android:textSize="@dimen/size_26"
+                android:textStyle="bold"
+                app:fontFamily="@font/lato"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_edit_email" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tv_edit_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lato"
+                android:paddingVertical="@dimen/space_15"
+                android:text="@string/_null"
+                android:textColor="@color/black_green"
+                android:textSize="@dimen/size_20"
+                android:textStyle="italic"
+                app:fontFamily="@font/lato"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_name" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tv_edit_age"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lato"
+                android:paddingVertical="@dimen/space_15"
+                android:text="@string/_null"
+                android:textColor="@color/black_green"
+                android:textSize="@dimen/size_20"
+                android:textStyle="italic"
+                app:fontFamily="@font/lato"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_age" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tv_edit_weight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lato"
+                android:paddingVertical="@dimen/space_15"
+                android:text="@string/_null"
+                android:textColor="@color/black_green"
+                android:textSize="@dimen/size_20"
+                android:textStyle="italic"
+                app:fontFamily="@font/lato"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_weight" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tv_edit_target_weight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lato"
+                android:paddingVertical="@dimen/space_15"
+                android:text="@string/_null"
+                android:textColor="@color/black_green"
+                android:textSize="@dimen/size_20"
+                android:textStyle="italic"
+                app:fontFamily="@font/lato"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_target_weight" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tv_edit_height"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lato"
+                android:paddingVertical="@dimen/space_15"
+                android:text="@string/_null"
+                android:textColor="@color/black_green"
+                android:textSize="@dimen/size_20"
+                android:textStyle="italic"
+                app:fontFamily="@font/lato"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_height" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tv_edit_email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lato"
+                android:paddingVertical="@dimen/space_15"
+                android:text="@string/_null"
+                android:textColor="@color/black_green"
+                android:textSize="@dimen/size_20"
+                android:textStyle="italic"
+                app:fontFamily="@font/lato"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvEmail" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tv_edit_gender"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lato"
+                android:paddingVertical="@dimen/space_15"
+                android:text="@string/_null"
+                android:textColor="@color/black_green"
+                android:textSize="@dimen/size_20"
+                android:textStyle="italic"
+                app:fontFamily="@font/lato"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_gender" />
 
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_target_weight"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/space_30"
-        android:fontFamily="@font/lato"
-        android:gravity="center"
-        android:paddingVertical="@dimen/space_15"
-        android:text="@string/target_weight"
-        android:textColor="@color/black"
-        android:textSize="@dimen/size_20"
-        app:fontFamily="@font/lato"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_weight" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_height"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/space_30"
-        android:fontFamily="@font/lato"
-        android:gravity="center"
-        android:paddingVertical="@dimen/space_15"
-        android:text="@string/height"
-        android:textColor="@color/black"
-        android:textSize="@dimen/size_20"
-        app:fontFamily="@font/lato"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_target_weight" />
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tv_weight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/space_30"
+                android:fontFamily="@font/lato"
+                android:gravity="center"
+                android:paddingVertical="@dimen/space_15"
+                android:text="@string/weight"
+                android:textColor="@color/white"
+                android:textSize="@dimen/size_26"
+                android:textStyle="bold"
+                app:fontFamily="@font/lato"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_edit_age" />
 
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_gender"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/space_30"
-        android:fontFamily="@font/lato"
-        android:gravity="center"
-        android:paddingVertical="@dimen/space_15"
-        android:text="@string/gender"
-        android:textColor="@color/black"
-        android:textCursorDrawable="@color/blue_black"
-        android:textSize="@dimen/size_20"
-        app:fontFamily="@font/lato"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_height" />
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tv_target_weight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/space_30"
+                android:fontFamily="@font/lato"
+                android:gravity="center"
+                android:paddingVertical="@dimen/space_15"
+                android:text="@string/target_weight"
+                android:textColor="@color/white"
+                android:textSize="@dimen/size_26"
+                android:textStyle="bold"
+                app:fontFamily="@font/lato"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_edit_weight" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tv_height"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/space_30"
+                android:fontFamily="@font/lato"
+                android:gravity="center"
+                android:paddingVertical="@dimen/space_15"
+                android:text="@string/height"
+                android:textColor="@color/white"
+                android:textSize="@dimen/size_26"
+                android:textStyle="bold"
+                app:fontFamily="@font/lato"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_edit_target_weight" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tv_gender"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/space_30"
+                android:fontFamily="@font/lato"
+                android:gravity="center"
+                android:paddingVertical="@dimen/space_15"
+                android:text="@string/gender"
+                android:textColor="@color/white"
+                android:textCursorDrawable="@color/blue_black"
+                android:textSize="@dimen/size_26"
+                android:textStyle="bold"
+                app:fontFamily="@font/lato"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_edit_height" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
+</FrameLayout>
