--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,4 +25,6 @@
     <dimen name="space_300">300dp</dimen>
     <dimen name="size_18">18sp</dimen>
     <dimen name="size_15">15sp</dimen>
+    <dimen name="space_40">40dp</dimen>
+    <dimen name="space_0">0dp</dimen>
 </resources>
